syntax = "proto3";

package apiproto;

service TaskRepo {
    rpc AddNewEmployee(Employee) returns (ResponseEmployee);
    rpc UpdateEmployee(Employee) returns (ResponseEmployee);
    rpc FindEmployee(Employee) returns (ResponseEmployee);
    rpc UpdateEmployeeWithFormData(Employee) returns (ResponseEmployee);
    rpc DeleteEmployee(Employee) returns (ResponseEmployee);

    rpc AddNewCompany(Company) returns (ResponseCompany);
    rpc UpdateCompany(Company) returns (ResponseCompany);
    rpc FindCompany(Company) returns (ResponseCompany);
    rpc UpdateCompanyWithFormData(Company) returns (ResponseCompany);
    rpc DeleteCompany(Company) returns (ResponseCompany);
    rpc GetCompanyEmployeesList(Company) returns (ResponseEmployee);
}

message Employee {
    int64 id = 1;
    string name = 2;
    string second_name = 3;
    string surname = 4;
    string hire_date = 5;
    string position = 6;
    int64 company_id = 7;
}

message Company {
    int64 id = 1;
    string name = 2;
    string legal_form = 3;
}

message ResponseEmployee {
    int32 status = 1;
    repeated Employee employee = 2;
}

message ResponseCompany {
    int32 status = 1;
    repeated Company company = 2;
}